# urdf_models

./: LICENSE  README.md  tracebot_macro.urdf.xacro
tracebot_description/: CMakeLists.txt  README.md  package.xml  upstream.repos
tracebot_description/config/: tracebot.rviz
tracebot_description/config/astech/: camera_robot_calibration.yaml  config.yaml
tracebot_description/config/astech/ur_calibration/: ur10e_left.yaml  ur10e_right.yaml
tracebot_description/config/tecnalia/: camera_robot_calibration.yaml  config.yaml
tracebot_description/config/tecnalia/ur_calibration/: ur5_left.yaml  ur5e_right.yaml
tracebot_description/launch/: camera_robot_calibration.launch  launch_tracebot_rviz.launch  load_pump_mockup.launch  load_tracebot_description.launch
tracebot_description/meshes/components/: BottleLarge.stl  LargeRinseFluidA_Bottle.stl  MediumRinseFluidK_Bottle.stl  Needle.stl  RedCap.stl  SmallSoyBroth_Bottle.stl  TransferNeedle.stl  YellowCap.stl  canister.stl
tracebot_description/meshes/components/pump_components/: M_Black.T3D  M_PlasticBlue.T3D  M_PumpPlastic.T3D  M_SteelSatin.T3D  Pump_Body.fbx  Pump_Body.stl  Pump_Display.dae  Pump_Display.fbx  Pump_Display.stl  Pump_DrainTray.dae  Pump_DrainTray.fbx  Pump_DrainTray.stl  (+28 more)
tracebot_description/meshes/environment/: shelf.stl
tracebot_description/meshes/robot/: arm_mount.fbx  arm_mount_collision.dae  arm_mount_collision.fbx  camera_bracket_base.dae  camera_bracket_base.fbx  camera_bracket_pivot.dae  camera_bracket_pivot.fbx  table.dae  table.fbx
tracebot_description/scripts/: camera_robot_calibration
tracebot_description/urdf/: pump.urdf.xacro  pump_mockup.urdf.xacro  pump_mockup_macro.urdf.xacro  tracebot.urdf.xacro  tracebot_macro.urdf.xacro
tracebot_gripper_description/: CMakeLists.txt  README.md  package.xml
tracebot_gripper_description/config/: tracebot_gripper.rviz
tracebot_gripper_description/launch/: display_tracebot_gripper_rviz.launch
tracebot_gripper_description/meshes/: actuator_block.dae  distal_phalanx.dae  driver_box.dae  intermediate_phalanx.dae  palm.dae  palm_rotation_support.dae  proximal_phalanx.dae
tracebot_gripper_description/urdf/: tracebot_finger_macro.xacro  tracebot_gripper.xacro  tracebot_gripper_UR_cable_support_1.xacro  tracebot_gripper_UR_cable_support_2.xacro  tracebot_gripper_driver_box.xacro  tracebot_gripper_macro.xacro
(+5 files in other folders)
