<package format="2">
  <name>tracebot_gripper_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for thr TraceBot gripper designed by CEA</p>
  </description>
  <author>Clemence Dubois</author>
  <maintainer email="clemence.dubois@cea.fr" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <export>
    <architecture_independent />
  </export>
</package>